# sturdy-umbrella

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
include/: logger.hpp
tests/: test_logger.cpp
